--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -62,7 +62,7 @@
 
 
 
-            <img class="main-image" src="./assets/Foto Auto Esperia Gara_noScritta.png" alt="Photo of the Esperia car">
+            <img class="main-image" src="./assets/Foto Auto Esperia Gara_noScritta.jpg" alt="Photo of the Esperia car">
 
             <section class="componenti-esperia">
                 <h2>Componenti auto Esperia</h2>
