--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -87,7 +87,7 @@
                         <li>
                             <a href="./elementiMotore.html" class="list-item">
                                 <img src="./assets/icona_motore.jfif" alt="Motor Icon" class="icon">
-                                <span>Elementi trasmissione</span>
+                                <span>Elementi motore e trasmissione</span>
                             </a>
                             <p class="descrizione">Esplora i dettagli del motore che ha alimentato la potenza della
                                 Esperia.</p>
