--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -40,7 +40,8 @@
 
         <main class="content">
             <section class="testo-principale">
-                <h3 class="section-title">L'auto Esperia</h3>
+                <h3 class="section-title" ; style="font-family: 'EB Garamond', serif; color: #343D90">L'auto Esperia
+                </h3>
                 <p class="section-text">
                     L'Esperia non fu solo un’automobile, ma un simbolo dell’ambizione industriale italiana agli inizi
                     del Novecento. Fondata nel 1905 a Bergamo, la Società Automobili Lombarda (S.A.L.) cercò di
@@ -62,10 +63,10 @@
 
 
 
-            <img class="main-image" src="./assets/Foto Auto Esperia Gara_noScritta.jpg" alt="Photo of the Esperia car">
+            <img class="main-image" src="./assets/Foto Auto Esperia Gara.png" alt="Photo of the Esperia car">
 
             <section class="componenti-esperia">
-                <h2>Componenti auto Esperia</h2>
+                <h2 style="font-family: 'EB Garamond', serif; color: #343D90">Componenti auto Esperia</h2>
                 <p>La trasmissione dell’auto è uno degli aspetti meccanici più fondamentali che permette al veicolo
                     di muoversi in avanti e indietro.Coinvolgendo diversi organi che hanno lo scopo di trasferire
                     la potenza generata dal motore alle ruote motrici. Questo sistema è ciò che permette al veicolo
@@ -97,7 +98,7 @@
             </section>
 
             <section class="testimonials">
-                <h2>Citazioni sull'auto Esperia</h2>
+                <h2 style="font-family: 'EB Garamond', serif; color: #343D90">Citazioni sull'auto Esperia</h2>
                 <div class="testimonials-container">
                     <div class="testimonial">
                         <h4>"L'auto Esperia ha segnato una rivoluzione nel design automobilistico italiano del XX
