--- a/elementiMacchina.html
+++ b/elementiMacchina.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./final_style.css">
     <title>Auto Esperia</title>
 </head>
+
 <body>
     <div class="safe-area">
         <header class="hero">
@@ -28,14 +29,29 @@
 
         <main>
             <section class="intro">
-                <h1>Componenti della macchina</h1>
+                <h1 style="font-family: 'EB Garamond', serif; color: #343D90">Componenti della macchina</h1>
                 <p>Questa pagina descrive i componenti essenziali per il funzionamento dell'autovettura.
                     Ogni parte contribuisce a garantire efficienza, sicurezza e prestazioni ottimali. L’obiettivo è
-                    fornire una visione generale delle varie componenti e della loro interazione all'interno del sistema auto.</p>
+                    fornire una visione generale delle varie componenti e della loro interazione all'interno del sistema
+                    auto.</p>
             </section>
 
             <section class="items-container">
-               <div class="sketchfab-embed-wrapper"> <iframe title="SAL Esperia 1908" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/94f6549f977b4ea9907472afc8fe1b84/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/sal-esperia-1908-94f6549f977b4ea9907472afc8fe1b84?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> SAL Esperia 1908 </a> by <a href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+                <div class="sketchfab-embed-wrapper">
+                    <iframe title="test1" frameborder="0" allowfullscreen mozallowfullscreen="true"
+                        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+                        xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share
+                        width="2000" height="1800"
+                        src="https://sketchfab.com/models/45132723061c41dc959d27f280480f30/embed"></iframe>
+                    <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a
+                            href="https://sketchfab.com/3d-models/test1-45132723061c41dc959d27f280480f30?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> test1 </a> by <a
+                            href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a>
+                        on <a
+                            href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p>
+                </div>
             </section>
         </main>
 
@@ -47,5 +63,5 @@
         </footer>
     </div>
 </body>
-</html>
 
+</html>
