--- a/elementiMotore.html
+++ b/elementiMotore.html
@@ -23,13 +23,13 @@
                     <a class="menu-item" href="./storia.html">Storia</a>
                     <a class="menu-item active" href="./auto_esperia.html">Auto Esperia</a>
                     <a class="menu-item" href="./curiosità.html">Curiosità</a>
-                                    </nav>
+                </nav>
             </div>
         </header>
 
         <main>
             <section class="intro">
-                <h1>Componenti del motore</h1>
+                <h1 style="font-family: 'EB Garamond', serif; color: #343D90">Componenti del motore</h1>
                 <p>Questa pagina offre una panoramica sui principali componenti di un motore. Ogni parte ha una
                     funzione specifica che contribuisce al suo corretto funzionamento, dalla generazione di potenza alla
                     gestione della combustione. L’obiettivo è fornire una comprensione generale del motore e dei suoi
@@ -38,34 +38,41 @@
 
             <section class="items-container">
                 <div class="sketchfab-embed-wrapper">
-                    <iframe title="test1" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"
-                            allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                            execution-while-out-of-viewport execution-while-not-rendered web-share
-                            src="https://sketchfab.com/models/45132723061c41dc959d27f280480f30/embed"></iframe>
+                    <iframe title="test1" frameborder="0" allowfullscreen mozallowfullscreen="true"
+                        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+                        xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share
+                        src="https://sketchfab.com/models/45132723061c41dc959d27f280480f30/embed"></iframe>
                     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
                         <a href="https://sketchfab.com/3d-models/test1-45132723061c41dc959d27f280480f30?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
-                           target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> test1 </a> by <a
-                                href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
-                                target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a>
-                        on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
-                             target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p>
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> test1 </a> by <a
+                            href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a>
+                        on <a
+                            href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                    </p>
                 </div>
-            
+
                 <div class="sketchfab-embed-wrapper">
-                    <iframe title="Assieme Motore Esperia Finale" frameborder="0" allowfullscreen mozallowfullscreen="true"
-                            webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                            execution-while-out-of-viewport execution-while-not-rendered web-share
-                            src="https://sketchfab.com/models/15da928a6ba74f87bddaf7596d8a5bed/embed"></iframe>
+                    <iframe title="Assieme Motore Esperia Finale" frameborder="0" allowfullscreen
+                        mozallowfullscreen="true" webkitallowfullscreen="true"
+                        allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
+                        execution-while-out-of-viewport execution-while-not-rendered web-share
+                        src="https://sketchfab.com/models/15da928a6ba74f87bddaf7596d8a5bed/embed"></iframe>
                     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
                         <a href="https://sketchfab.com/3d-models/assieme-motore-esperia-finale-15da928a6ba74f87bddaf7596d8a5bed?utm_medium=embed&utm_campaign=share-popup&utm_content=15da928a6ba74f87bddaf7596d8a5bed"
-                           target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Assieme Motore Esperia Finale </a>
-                        by <a href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=15da928a6ba74f87bddaf7596d8a5bed"
-                             target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a> on
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Assieme Motore
+                            Esperia Finale </a>
+                        by <a
+                            href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=15da928a6ba74f87bddaf7596d8a5bed"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a>
+                        on
                         <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=15da928a6ba74f87bddaf7596d8a5bed"
-                           target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p>
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                    </p>
                 </div>
             </section>
-            
+
 
         </main>
 
