--- a/storia.html
+++ b/storia.html
@@ -111,48 +111,72 @@
 
         <div class="content">
             <section>
-                <h1 class="title_index">La storia dell'Esperia</h1>
+                <h1 class="title_index" style="font-family: 'EB Garamond', serif; color: #343D90">La storia dell'Esperia
+                </h1>
             </section>
 
             <!-- Primo blocco con titolo, testo e immagini -->
             <div class="section-container flex-no-margin">
-                <h2 class="title_index"><b>L'Esperia: simbolo dell'ambizione industriale italiana e delle difficoltà del settore automobilistico</b></h2>
-            </div>
-            <div class="section-container flex">
-                <div class="text-content">
-                    <p>
-                        La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.
-                    </p>
+                <h2 class="title_index" style="font-family: 'EB Garamond', serif; color: #343D90"><b>L'Esperia: simbolo
+                        dell'ambizione industriale italiana e delle difficoltà del
+                        settore automobilistico</b></h2>
+                <div class="section-container flex">
+                    <div class="text-content">
+                        <p>
+                            La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel
+                            settore automobilistico con il modello Esperia, un'auto innovativa e di alta qualità,
+                            pensata per competere con le grandi case automobilistiche internazionali. Nonostante le sue
+                            prestazioni avanzate e il design raffinato, l'azienda affrontò gravi difficoltà, tra cui la
+                            concorrenza estera, la mancanza di capitali e una rete di distribuzione limitata. La crisi
+                            economica e la difficoltà nell'espandersi portarono infine al declino e alla chiusura della
+                            S.A.L., nonostante la validità dei suoi prodotti.
+                        </p>
+                    </div>
+                    <img src="./assets/tesserino2.jpg" alt="Cartello della S.A.L.">
+                    <img src="./assets/Foto Macchina Esperia PO.jpg" alt="Modello della macchina Esperia">
                 </div>
-                <img src="./assets/tesserino2.jpg" alt="Cartello della S.A.L.">
-                <img src="./assets/Foto Macchina Esperia PO.jpg" alt="Modello della macchina Esperia">
             </div>
 
             <!-- Secondo blocco -->
             <div class="section-container flex-no-margin">
-                <h2 class="title_index"><b>La S.A.L.: dal declino industriale alla rinascita attraverso la formazione tecnica</b></h2>
-            </div>
-            <div class="section-container flex">
-                <div class="text-content">
-                    <p>
-                        Nel 1909, a causa di difficoltà economiche e di mercato, la S.A.L. fu costretta a liquidarsi e venne acquisita dall’imprenditore Giovanni Macagno. Sotto la sua guida, l’azienda cercò di rilanciarsi con nuovi modelli di automobili, come il 20/24 HP e il 40/50 HP, che si distinguevano per soluzioni tecniche avanzate come i motori monoblocco e la trasmissione cardanica.
-                        Nonostante gli sforzi per modernizzare la produzione e competere con le case automobilistiche più affermate, il rilancio non ebbe successo a causa della forte concorrenza, dell’instabilità economica e delle difficoltà legate allo sviluppo di un'industria automobilistica giovane in Italia. Nel 1913, la S.A.L. chiuse definitivamente.
-                    </p>
+                <h2 class="title_index" style="font-family: 'EB Garamond', serif; color: #343D90"><b>La S.A.L.: dal
+                        declino industriale alla rinascita attraverso la formazione
+                        tecnica</b></h2>
+                <div class="section-container flex">
+                    <div class="text-content">
+                        <p>
+                            Nel 1909, a causa di difficoltà economiche e di mercato, la S.A.L. fu costretta a liquidarsi
+                            e venne acquisita dall’imprenditore Giovanni Macagno. Sotto la sua guida, l’azienda cercò di
+                            rilanciarsi con nuovi modelli di automobili, come il 20/24 HP e il 40/50 HP, che si
+                            distinguevano per soluzioni tecniche avanzate come i motori monoblocco e la trasmissione
+                            cardanica.
+                            Nonostante gli sforzi per modernizzare la produzione e competere con le case
+                            automobilistiche più affermate, il rilancio non ebbe successo a causa della forte
+                            concorrenza, dell’instabilità economica e delle difficoltà legate allo sviluppo di
+                            un'industria automobilistica giovane in Italia. Nel 1913, la S.A.L. chiuse definitivamente.
+                        </p>
+                    </div>
+                    <img src="./assets/fabbrica.png" alt="La fabbrica Esperia in attività">
                 </div>
-                <img src="./assets/fabbrica.png" alt="La fabbrica Esperia in attività">
             </div>
 
             <!-- Terzo blocco -->
             <div class="section-container flex-no-margin">
-                <h2 class="title_index"><b>Esperia: Un simbolo di progresso e tradizione nell'Industria Automobilistica Italiana</b></h2>
-            </div>
-            <div class="section-container flex">
-                <div class="text-content">
-                    <p>
-                        L'Istituto "Pietro Paleocapa" continua oggi a rappresentare un'eccellenza nel settore della formazione tecnica, preparando ogni anno centinaia di studenti ad affrontare il mondo del lavoro con competenze avanzate e una solida preparazione tecnologica. Questo legame tra industria e istruzione, tra passato e presente, dimostra come la storia di un'azienda possa trasformarsi e diventare parte integrante della cultura e dello sviluppo di una comunità.
-                    </p>
+                <h2 class="title_index" style="font-family: 'EB Garamond', serif; color: #343D90"><b>Esperia: Un simbolo
+                        di progresso e tradizione nell'Industria Automobilistica
+                        Italiana</b></h2>
+                <div class="section-container flex">
+                    <div class="text-content">
+                        <p>
+                            L'Istituto "Pietro Paleocapa" continua oggi a rappresentare un'eccellenza nel settore della
+                            formazione tecnica, preparando ogni anno centinaia di studenti ad affrontare il mondo del
+                            lavoro con competenze avanzate e una solida preparazione tecnologica. Questo legame tra
+                            industria e istruzione, tra passato e presente, dimostra come la storia di un'azienda possa
+                            trasformarsi e diventare parte integrante della cultura e dello sviluppo di una comunità.
+                        </p>
+                    </div>
+                    <img src="./assets/museo.jpg" alt="Museo TIME della scuola Pietro Paleocapa">
                 </div>
-                <img src="./assets/museo.jpg" alt="Museo TIME della scuola Pietro Paleocapa">
             </div>
         </div>
 
