--- a/elementiMacchina.html
+++ b/elementiMacchina.html
@@ -37,22 +37,34 @@
             </section>
 
             <section class="items-container">
-                <div class="sketchfab-embed-wrapper">
-                    <iframe title="test1" frameborder="0" allowfullscreen mozallowfullscreen="true"
-                        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
-                        xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share
-                        width="2000" height="1800"
-                        src="https://sketchfab.com/models/45132723061c41dc959d27f280480f30/embed"></iframe>
+                <div class="sketchfab-embed-wrapper"> <iframe title="SAL Esperia 1908" frameborder="0" allowfullscreen
+                        mozallowfullscreen="true" webkitallowfullscreen="true"
+                        allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
+                        execution-while-out-of-viewport execution-while-not-rendered web-share
+                        src="https://sketchfab.com/models/94f6549f977b4ea9907472afc8fe1b84/embed"> </iframe>
                     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a
-                            href="https://sketchfab.com/3d-models/test1-45132723061c41dc959d27f280480f30?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
-                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> test1 </a> by <a
-                            href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            href="https://sketchfab.com/3d-models/sal-esperia-1908-94f6549f977b4ea9907472afc8fe1b84?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84"
+                            target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> SAL Esperia 1908
+                        </a> by <a
+                            href="https://sketchfab.com/PaleoHistory?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84"
                             target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> PaleoHistory </a>
                         on <a
-                            href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=45132723061c41dc959d27f280480f30"
+                            href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=94f6549f977b4ea9907472afc8fe1b84"
                             target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p>
                 </div>
+
             </section>
+
+            <!-- Nuova sezione per l'immagine -->
+            <section class="tavola">
+                <h2 style="font-family: 'EB Garamond', serif; color: #343D90; margin-bottom: 20px;">Messa in Tavola Auto
+                    Esperia</h2>
+                <div class="image-container">
+                    <img src="./assets/Tavola motore (2).jpg" alt="Tavola Motore"
+                        style="max-width: 48%; height: auto; border: 2px solid #ddd; border-radius: 10px;">
+                </div>
+            </section>
+
         </main>
 
         <footer class="footer">
