--- a/elementiMotore.html
+++ b/elementiMotore.html
@@ -73,6 +73,14 @@
                 </div>
             </section>
 
+            <!-- Nuova sezione per le immagini affiancate -->
+            <section class="tavola-motore-trasmissione">
+                <h2 style="font-family: 'EB Garamond', serif; color: #343D90; margin-bottom: 20px;">Messa in Tavola della Trasmissione e del Motore</h2>
+                <div class="image-container" style="display: flex; justify-content: space-between; gap: 20px;">
+                    <img src="./assets/Tavola motore (3).jpg" alt="Motore Esperia 1" style="width: 48%; height: auto; border: 2px solid #ddd; border-radius: 10px;">
+                    <img src="./assets/Tavola motore (1).jpg" alt="Motore Esperia 3" style="width: 48%; height: auto; border: 2px solid #ddd; border-radius: 10px;">
+                </div>
+            </section>
 
         </main>
 
