--- a/paleohistory-main/Paleo-history/home.html
+++ b/paleohistory-main/Paleo-history/home.html
@@ -74,8 +74,9 @@
                 <p>
                     Il contesto storico di riferimento del progetto risale alle origini dell'Istituto Tecnico
                     Industriale. La ricostruzione del periodo avviene tramite consultazione della ricca documentazione,
-                    custodita nell'archivio dell'Istituto Paleocapa, nonché presente nella rivista “Omnia: revue
-                    pratique de locomotion”. <br>
+                    custodita nell'archivio dell'Istituto Paleocapa, nonché presente nella rivista <a
+                        href="https://gallica.bnf.fr/ark:/12148/bpt6k9811418d/f137.item" target="_blank">"Omnia: revue
+                        pratique de locomotion"</a>. <br>
                     La storia dell'Esperia, che ha inizio nel 1849 con la fondazione della Scuola Serale di Disegno per
                     operai a Bergamo, evidenzia un forte legame con lo sviluppo industriale della provincia bergamasca.
                     Fin dal principio, l'istituto è stato un punto di riferimento per l'educazione tecnica, sostenuto
