--- a/paleohistory-main/Paleo-history/home.html
+++ b/paleohistory-main/Paleo-history/home.html
@@ -74,8 +74,8 @@
                 <p>
                     Il contesto storico di riferimento del progetto risale alle origini dell'Istituto Tecnico
                     Industriale. La ricostruzione del periodo avviene tramite consultazione della ricca documentazione,
-                    custodita nell'archivio dell'Istituto Paleocapa, nonché presente nella rivista <a
-                        href="https://gallica.bnf.fr/ark:/12148/bpt6k9811418d/f137.item" target="_blank">"Omnia: revue
+                    custodita nell'archivio dell'Istituto Paleocapa, nonché presente nella rivista <a class="link"
+                        href="../Paleo-history/assets/Omnia___revue_pratique.pdf" target="_blank">"Omnia: revue
                         pratique de locomotion"</a>. <br>
                     La storia dell'Esperia, che ha inizio nel 1849 con la fondazione della Scuola Serale di Disegno per
                     operai a Bergamo, evidenzia un forte legame con lo sviluppo industriale della provincia bergamasca.
